src/test/ui/derives/issue-97343.stderr
error[E0109]: type arguments are not allowed for this type
  --> $DIR/issue-97343.rs:4:23
   |
LL | #[derive(Debug)]
   |          ----- in this derive macro expansion
LL | pub struct Irrelevant<Irrelevant> {
   |                       ^^^^^^^^^^ type argument not allowed
   |
   = note: this error originates in the derive macro `Debug` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0109`.
